<resources>
    <string name="app_name">RedditBot</string>
    <string name="subreddits">Subreddits</string>
    <string name="add_subreddit">Add Subreddit</string>
    <string name="add_new_subreddit">Add New Subreddit</string>
    <string name="name">Name</string>
    <string name="max_of_posts">Max. Posts: </string>
    <string name="terms">Terms: </string>
    <string name="add_name_edit">Do not include r/</string>
    <string name="add_max_posts_edit">Top X posts agent will look through</string>
    <string name="add_terms_edit">One at a time, case insensitive</string>
    <string name="add_term">Add Term</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_subreddit">Edit Subreddit</string>
    <string name="done_button_text">Done</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="add_term_here">Add term here…</string>
    <string name="confirm_button">Confirm</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="your_account">Your Account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username">Username</string>
    <string name="client_id">ID: aQX9sTCv_2zoSf-WTknuHP</string>
    <string name="client_secret">Secret: 47r89GZwrASVwmIwuv95WpccLM0rAR</string>
    <string name="agent_author">Author: John Doe</string>
    <string name="agent_receiver">Receiver: MainUser64</string>
    <string name="agent_username">Dev: standardBot</string>
    <string name="image_of_a_reddit_avatar">Image of a reddit avatar</string>
    <string name="author">Author Name</string>
    <string name="name_of_your_bot_app">App Name</string>
    <string name="username_to_send_to">Username to send to</string>
    <string name="client_secret_text">Client Secret</string>
    <string name="client_id_text">Client Id</string>
    <string name="agent_password">Agent Password</string>
    <string name="agent_username_text">Agent Username</string>
    <string name="delete_add_button">delete/add button</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="posts">Posts</string>
    <string name="account">u/clanginator</string>
    <string name="subreddit">r/subreddit</string>
    <string name="time">6h</string>
    <string name="title">A Study on a Post\'s Title</string>
    <string name="_91_comments">91 Comments</string>
    <string name="_20">20</string>
    <string name="_177">177</string>
    <string name="so_there_is_this_idea_where_you_can_just_do">So there is this idea where you can just do…</string>
    <string name="dot">·</string>
    <string name="author_name">Author Username</string>
    <string name="back_button">Back Button</string>
    <string name="authentication">Authentication</string>
    <string name="lookup">Lookup</string>

</resources>