<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit_text_client_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="38"
        android:hint="@string/client_id_text"
        android:inputType="text"
        android:autofillHints="username"/>
    <EditText
        android:id="@+id/edit_text_secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_secret_text"
        android:inputType="text"
        android:autofillHints="username"/>
    <EditText
        android:id="@+id/edit_text_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:hint="@string/name_of_your_bot_app"
        android:inputType="text"
        android:autofillHints="username"/>
    <EditText
        android:id="@+id/edit_text_author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:hint="@string/author_name"
        android:inputType="text"
        android:autofillHints="username"/>

</LinearLayout>