<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AddSubredditFragment">

    <TextView
        android:id="@+id/add_subreddit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_subreddit"
        android:paddingBottom="10sp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/subreddit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:paddingTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_subreddit_textview"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_subreddit_name_layout"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:paddingBottom="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subreddit_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name_edit" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/subreddit_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_subreddit_name_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_subreddit_terms_layout"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subreddit_terms">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/terms_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxEms="21"
                android:hint="@string/add_terms_edit" />
        </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/terms_displayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_subreddit_terms_layout"/>

    <TextView
        android:id="@+id/max_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_of_posts"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_displayed"/>

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="20"
        android:min="1"
        android:progress="1"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/max_posts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_displayed"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/confirm_button" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/complete_button"
        app:layout_constraintTop_toBottomOf="@id/terms_displayed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/cancel_button"
        android:contentDescription="@string/back_button" />
</androidx.constraintlayout.widget.ConstraintLayout>