<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272424"
    android:id="@+id/fragment_account">


    <TextView
        android:id="@+id/tvUpdateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_account"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="#EFEBEB"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/imgProfilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/account_default_profile"
        app:layout_constraintTop_toBottomOf="@id/tvUpdateProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/profile_picture"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imgProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sign_out_button_text"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullNameInputLayout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        android:layout_marginTop="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/sign_out_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintWidth_percent="0.4"
        app:backgroundTint="@color/nice_green"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="#FFFFFF"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text"
        android:layout_marginTop="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/sign_out_button"
        app:layout_constraintStart_toEndOf="@id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:backgroundTint="@color/cancel_button_red"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="#FFFFFF"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>