<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditSubredditFragment">

    <TextView
        android:id="@+id/add_subreddit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_subreddit"
        android:paddingBottom="10sp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/max_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_of_posts"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:paddingBottom="8sp"
        app:layout_constraintTop_toBottomOf="@id/add_subreddit_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="20"
        android:min="1"
        android:progress="3"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/max_posts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:paddingTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="400sp"
        android:layout_height="400sp"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/some_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/recyclerView">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:textStyle="bold"
            android:background="@color/cancel_button_red"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/done_button"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/done_button_text"
            android:textStyle="bold"
            android:background="@color/done_button_green"
            android:layout_marginStart="16sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>