<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@color/dark_blue2">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="215dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:background="@color/nice_yellow">


            </RelativeLayout>

            <TextView
                android:id="@+id/agent_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/name"
                android:textColor="@color/item_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/agent_clientId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/agent_app_name"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="32dp"
                android:text="@string/client_id"
                android:textColor="@color/item_color"
                android:textSize="11sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/agent_author"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="8dp"
                android:text="@string/agent_author"
                android:textSize="16sp"
                android:textColor="@color/item_color"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_of_a_reddit_avatar"
                android:src="@drawable/reddit_avatar" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/red_delete_button"
                android:contentDescription="@string/delete_add_button"
                android:padding="16dp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>